--- a/templates/entry.html
+++ b/templates/entry.html
@@ -5,7 +5,7 @@
     <title>Add Student</title>
 </head>
 <body>
-  <form >
+  <form method="get" action="/">
     <label for="stuname">Name*:</label><br>
     <input type="text" id="stuname" name="stuname" placeholder="Rahul Singh" required><br><br>
 
