--- a/templates/home.html
+++ b/templates/home.html
@@ -11,15 +11,15 @@
 <body>
     <center>
         <form action="/" method="get">
-            <h1>Welcome to 'Attendance Report and Analytics' Home page.</h1>
+            <h1>'Report and Analytics of Attendance'</h1>
             <div>
-                <a href="/login">
-                    <h2>Student</h2>
+                <a href="/inputs">
+                    <h2>I am a Student</h2>
                 </a>
             </div>
             <div>
-                <a href="/login">
-                    <h2>Staff</h2>
+                <a href="/loginstaff">
+                    <h2>I am a Staff</h2>
                 </a>
             </div>
         </form>
