--- a/templates/loginstaff.html
+++ b/templates/loginstaff.html
@@ -42,7 +42,7 @@
                 function check(form)
                 {
 
-                    if(form.password.value == "staff123")
+                    if(form.password.value == "root")
                     {
                         return location.href="entry.html";
                     }
