choice added for staff

--- a/templates/loginstaff.html
+++ b/templates/loginstaff.html
@@ -22,7 +22,7 @@
         <h1>Type the password to gain access</h1>
 
 
-        <form action="/entry" method="get" >
+        <form action="/choice" method="get" >
             <div class="form-group">
                 <label>Password</label>
                 <input type="password" name="password" required>
