--- a/templates/result.html
+++ b/templates/result.html
@@ -5,7 +5,7 @@
     <title>Result</title>
 </head>
 <body>
-    <table>
+    <table border="2">
         <thead>
             <tr>
                 <th>Roll No</th>
