--- a/templates/input.html
+++ b/templates/input.html
@@ -25,10 +25,10 @@
         <form action="/inputs" method="post">
             <br>
             Roll Number = <input type="number" name="studentrollno" required/> <br><br>
-            Email the data?(y/n) = <input type="text" name="mailch" required/> <br><br>
+            Email the data?(y/n) = <input type="text" name="mailch"/> <br><br>
             <input type="submit" name="Submit" value="Submit"/>
         </form>
-        <iframe src="/result" width="1200" height="300"></iframe>
+        <iframe src="/resultone" width="1200" height="300"></iframe>
         <br><br>
         <a href="/">Home</a>
     </center>
