--- a/templates/resultone.html
+++ b/templates/resultone.html
@@ -22,7 +22,7 @@
 
 
         <tbody>
-            {% for row in temp: %}
+            {% for row in value: %}
                 <tr>
                     <td>{{ row[1] }}</td>
                     <td>{{ row[2] }}</td>
@@ -37,6 +37,5 @@
             {% endfor %}
         </tbody>
     </table>
-    <a href="/">Home</a>
 </body>
 </html>
