removed iframe in student's section & tried to implement searching in app.py

--- a/templates/input.html
+++ b/templates/input.html
@@ -28,7 +28,7 @@
             Email the data?(y/n) = <input type="text" name="mailch"/> <br><br>
             <input type="submit" name="Submit" value="Submit"/>
         </form>
-        <iframe src="/resultone" width="1200" height="300"></iframe>
+<!--        <iframe src="/resultone" width="1200" height="300"></iframe>-->
         <br><br>
         <a href="/">Home</a>
     </center>
