--- a/templates/resultone.html
+++ b/templates/resultone.html
@@ -22,6 +22,9 @@
 
 
         <tbody>
+        {% if value == 0: %}
+            <h1>Input not given or Data not found</h1>
+        {% else: %}
             {% for row in value: %}
                 <tr>
                     <td>{{ row[1] }}</td>
@@ -35,6 +38,7 @@
                     <td>{{ row[9] }}</td>
                 </tr>
             {% endfor %}
+        {% endif %}
         </tbody>
     </table>
 </body>
