Lot of new changes and touchups

--- a/templates/choice.html
+++ b/templates/choice.html
@@ -8,6 +8,7 @@
     <div style="text-align: center;">
         <br> <br>
         <a href="/entry" >Add Student Data</a> <br> <br>
+        <a href="/delroll">Delete Student Data</a> <br> <br>
         <a href="/result">View All Data</a> <br> <br>
         <a href="/">Home</a>
     </div>
