--- a/templates/entry.html
+++ b/templates/entry.html
@@ -5,41 +5,43 @@
     <title>Add Student</title>
 </head>
 <body>
-  <form action="/entry" method="post">
-    <label for="stuname">Name*:</label><br>
-    <input type="text" id="stuname" name="stuname" placeholder="Rahul Singh" required><br><br>
+    <center>
+        <fieldset>
+        <form action="/entry" method="post">
+        <label for="stuname">Name*:</label><br>
+        <input type="text" id="stuname" name="stuname" placeholder="Rahul Singh" required><br><br>
 
-    <fieldset>
         <legend>Gender*:</legend>
-            <label for="male">Male</label>
-            <input type="radio" name="gender" id="male" value="male" required>
-            <label for="female">Female</label>
-            <input type="radio" name="gender" id="female" value="female" required>
-    </fieldset>
-    <br><br>
+        <label for="male">Male</label>
+        <input type="radio" name="gender" id="male" value="male" required>
+        <label for="female">Female</label>
+        <input type="radio" name="gender" id="female" value="female" required>
+        <br><br>
 
-    <label for="country">Country:</label><br>
-    <input type="text" name="country" id="country"><br><br>
+        <label for="country">Country:</label><br>
+        <input type="text" name="country" id="country"><br><br>
 
-    <label for="city">City:</label><br>
-    <input type="text" name="city" id="city"><br><br>
+        <label for="city">City:</label><br>
+        <input type="text" name="city" id="city"><br><br>
 
-    <label for="contactno">Contact No:</label><br>
-    <input type="number" name="contactno" id="contactno"><br><br>
+        <label for="contactno">Contact No:</label><br>
+        <input type="number" name="contactno" id="contactno"><br><br>
 
-    <label for="age">Age*:</label><br>
-    <input type="number" name="age" id="age" placeholder="18" required><br><br>
+        <label for="age">Age*:</label><br>
+        <input type="number" name="age" id="age" placeholder="18" required><br><br>
 
-    <label for="emailid">Email ID*:</label><br>
-    <input type="text" name="emailid" id="emailid" placeholder="example@example.com" required><br><br>
+        <label for="emailid">Email ID*:</label><br>
+        <input type="text" name="emailid" id="emailid" placeholder="example@example.com" required><br><br>
 
-    <label for="attend">Attendance*:</label><br>
-    <input type="number" name="attend" id="attend" maxlength="90" required><br><br>
+        <label for="attend">Attendance*:</label><br>
+        <input type="number" name="attend" id="attend" maxlength="90" required><br><br>
 
 
-    <input type="submit" value="Submit">
-      <br><br>
-      <a href="/">Home</a>
-  </form>
+        <input type="submit" value="Submit"><br><br>
+        </form>
+        </fieldset> <br><br>
+        <a href="/choice">Back to Menu</a> <br><br>
+        <a href="/">Home</a>
+    </center>
 </body>
 </html>
