--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,7 @@
     <title>Home</title>
 </head>
 <body>
+<!--    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">-->
     <center>
         <form action="/" method="get">
             <h1>'Report and Analytics of Attendance'</h1>
