--- a/templates/input.html
+++ b/templates/input.html
@@ -36,6 +36,7 @@
     <p>-The details about "Roll Number" and "Email the data?" should be submitted in the above boxes.</p>
     <p>-You can apply for email by giving input as 'y'/'n'(Yes/No).</p>
     <p>-After putting roll number and option(y/n) for email, the data for the specific roll number will be sent to Email ID owned by the person with that roll number.</p>
-    <p>-The data will then be converted into pdf file and will be sent after clicking submit.</p>
+    <p>-After clicking submit, a report pdf will be emailed to the candidate.</p>
+    <p>-To view your data online, just enter your roll number and leave email choice blank then click submit</p>
 </body>
 </html>
