--- a/templates/resultframe.html
+++ b/templates/resultframe.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Result</title>
+    <title></title>
 </head>
 <body>
     <center>
@@ -37,9 +37,7 @@
                     </tr>
                 {% endfor %}
             </tbody>
-        </table> <br><br>
-        <a href="/inputs">Back to Input</a> <br><br>
-        <a href="/">Home</a>
+        </table>
     </center>
 </body>
 </html>
