--- a/templates/notfoundstu.html
+++ b/templates/notfoundstu.html
@@ -7,6 +7,7 @@
 <body>
     <center>
         <h1>Roll number not found!</h1> <br><br>
+        <a href="/inputs">Back to Input</a> <br><br>
         <a href="/">Home</a>
     </center>
 </body>
