--- a/templates/resultone.html
+++ b/templates/resultone.html
@@ -6,38 +6,8 @@
 </head>
 <body>
     <center>
-        <table border="2">
-            <thead>
-                <tr>
-                    <th>Roll No</th>
-                    <th>Name</th>
-                    <th>Gender</th>
-                    <th>Country</th>
-                    <th>City</th>
-                    <th>Contact No</th>
-                    <th>Age</th>
-                    <th>Email Id</th>
-                    <th>Attendance</th>
-                </tr>
-            </thead>
-
-
-            <tbody>
-                {% for row in temp: %}
-                    <tr>
-                        <td>{{ row[1] }}</td>
-                        <td>{{ row[2] }}</td>
-                        <td>{{ row[3] }}</td>
-                        <td>{{ row[4] }}</td>
-                        <td>{{ row[5] }}</td>
-                        <td>{{ row[6] }}</td>
-                        <td>{{ row[7] }}</td>
-                        <td>{{ row[8] }}</td>
-                        <td>{{ row[9] }}</td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table> <br><br>
+        <h1>Data found for {{ data[0][2] }}</h1>
+        <br><br>
         <a href="/inputs">Back to Input</a> <br><br>
         <a href="/">Home</a>
     </center>
