--- a/templates/resultframe.html
+++ b/templates/resultframe.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title></title>
 </head>
-<body>
+<body class="page">
     <center>
-        <table border="2">
+        <table border="2" class="table">
             <thead>
                 <tr>
                     <th>Roll No</th>
@@ -40,4 +40,13 @@
         </table>
     </center>
 </body>
+<style>
+    .page {
+        background-color: grey;
+    }
+
+    .table {
+        background-color: white;
+    }
+</style>
 </html>
