--- a/templates/choice.html
+++ b/templates/choice.html
@@ -4,14 +4,51 @@
     <meta charset="UTF-8">
     <title>Choice</title>
 </head>
-<body>
+<body class="page">
     <div style="text-align: center;">
         <br> <br>
-        <a href="/entry" >Add Student Data</a> <br> <br>
-        <a href="/delroll">Delete Student Data</a> <br> <br>
-        <a href="/result">View All Data</a> <br> <br>
-        <a href="/">Home</a>
+        <a class="button" href="/entry" >Add Student Data</a> <br> <br>
+        <a class="button" href="/delroll">Delete Student Data</a> <br> <br>
+        <a class="button" href="/result">View All Data</a> <br> <br>
+        <a class="home" href="/">Home</a>
     </div>
 
 </body>
+
+<style>
+    .page {
+        background-color: grey;
+    }
+
+    .table {
+        background-color: white;
+    }
+
+    .button {
+        background-color: #008CBA;
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 20px;
+        margin: 4px 2px;
+        cursor: pointer;
+    }
+
+
+    .home {
+        background-color: green;
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+        padding: 10px 10px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 15px;
+        margin: 4px 2px;
+        cursor: pointer;
+    }
+</style>
 </html>
