--- a/templates/loginstaff.html
+++ b/templates/loginstaff.html
@@ -3,19 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
-    <style>
-        body{
-            font: 14px sans-serif;
-            text-align: center;
-         }
-        .wrapper{
-            width: 360px; padding: 20px;
-        }
-        p{ text-align: center; }
-        h1{ text-align: center; }
-    </style>
+
 </head>
-<body>
+<body class="page">
     <center>
     <div class="wrapper">
         <p>*Admin/Staff access is protected with a password authentication.*</p>
@@ -32,24 +22,65 @@
                     <input type="submit" class="btn btn-primary" value="Login" onclick="return check(this.form)">
             </div>
             <br><br>
-            <a href="/">Home</a>
+            <a class="button1"  href="/">Home</a>
         </form>
     </div>
     </center>
 </body>
 </html>
-<script language="javascript">
-                function check(form)
-                {
+<style>
+     .page {
+        background-color: grey;
+    }
+    body{
+        font: 14px sans-serif;
+        text-align: center;
+    }
+    .wrapper{
+        width: 360px; padding: 20px;
+    }
+    p{ text-align: center; }
+    h1{ text-align: center; }
 
-                    if(form.password.value == "root")
-                    {
-                        return location.href="entry.html";
-                    }
-                    else
-                    {
-                        alert("Error: Wrong Password")
-                        return false;
-                    }
-                }
+    .button {
+        background-color: #008CBA;
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 20px;
+        margin: 4px 2px;
+        cursor: pointer;
+    }
+
+    .button1 {
+        background-color: green;
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+        padding: 10px 10px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 15px;
+        margin: 4px 2px;
+        cursor: pointer;
+    }
+
+</style>
+<script language="javascript">
+    function check(form)
+    {
+
+        if(form.password.value == "root")
+        {
+            return location.href="entry.html";
+        }
+        else
+        {
+            alert("Error: Wrong Password")
+            return false;
+        }
+    }
 </script>
