--- a/templates/result.html
+++ b/templates/result.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>All Students</title>
 </head>
-<body>
+<body class="page">
     <center>
-        <table border="2">
+        <table border="2" class="table">
             <thead>
                 <tr>
                     <th>Roll No</th>
@@ -38,8 +38,44 @@
                 {% endfor %}
             </tbody>
         </table> <br><br>
-        <a href="/choice">Back to Menu</a> <br><br>
-        <a href="/">Home</a>
+        <a href="/choice" class="button">Back to Menu</a> <br><br>
+        <a href="/" class="button1">Home</a>
     </center>
 </body>
+<style>
+    .page {
+        background-color: grey;
+    }
+
+    .table {
+        background-color: white;
+    }
+
+    .button {
+        background-color: #008CBA;
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 20px;
+        margin: 4px 2px;
+        cursor: pointer;
+    }
+
+
+    .button1 {
+        background-color: green;
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+        padding: 10px 10px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 15px;
+        margin: 4px 2px;
+        cursor: pointer;
+    }
+</style>
 </html>
