--- a/templates/loginstaff.html
+++ b/templates/loginstaff.html
@@ -19,7 +19,7 @@
             </div>
             <br><br>
             <div class="form-group">
-                    <input type="submit" class="btn btn-primary" value="Login" onclick="return check(this.form)">
+                    <input class="button" type="submit" class="btn btn-primary" value="Login" onclick="return check(this.form)">
             </div>
             <br><br>
             <a class="button1"  href="/">Home</a>
